<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="110"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/historyBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/deepOrange200"
                android:text="@string/history_btn"
                android:textSize="14sp" />

            <Button
                android:id="@+id/memoryPlusBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/deepOrange600"
                android:text="@string/memory_plus_btn"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <Button
                android:id="@+id/memoryMinusBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/deepOrange600"
                android:text="@string/memory_minus_btn"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <Button
                android:id="@+id/memoryRestoreBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/deepOrange600"
                android:text="@string/memory_restore_btn"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/clear_btn"
                android:textColor="@color/red600"
                android:textSize="22sp" />

            <Button
                android:id="@+id/memoryClearBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/memory_clear_btn"
                android:textColor="@color/red600"
                android:textSize="22sp" />

            <Button
                android:id="@+id/backspaceBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/backspace_btn"
                android:textColor="@color/red600"
                android:textSize="22sp" />

            <Button
                android:id="@+id/percentBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/percent_btn"
                android:textColor="@color/blue600"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/seven_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/eightBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/eight_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/nine_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/divBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/div_btn"
                android:textColor="@color/blue600"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/four_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/five_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/six_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/mulBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/mul_btn"
                android:textColor="@color/blue600"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/oneBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/one_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/twoBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/two_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/threeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/three_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/minus_btn"
                android:textColor="@color/blue600"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zoreBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/zero_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/pointBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/point_btn"
                android:textSize="22sp" />

            <Button
                android:id="@+id/equalBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/equal_btn"
                android:textColor="@color/blue600"
                android:textSize="22sp" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray100"
                android:text="@string/plus_btn"
                android:textColor="@color/blue600"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>